package com.homannsoftware.blockbuilder.api.domain.ledger;

import com.homannsoftware.blockbuilder.api.domain.datasource.DataSource;

public interface LedgerDataSource extends DataSource {
}
