package com.homannsoftware.blockbuilder.api.domain.provider.liquidity;

import com.homannsoftware.blockbuilder.api.domain.datasource.DataSource;

public interface ExchangeDataSource extends DataSource {
}
