@startuml Domain Model

skinparam style strictuml
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.2
skinparam ArrowColor #gray
hide empty members

' Domain Objects

class "DataSource" as DataSource {
}

class "TransactionDataSource" as TransactionDataSource {
}

'class "DataSourceController" as DataSourceController {
'}

class "LedgerDataSource" as LedgerDataSource {
}

class "ExchangeDataSource" as ExchangeDataSource {
}

'class "LedgerRecordReader" as LedgerRecordReader {
'}

'class "LedgerRecordWriter" as LedgerRecordWriter {
'}

'class "TransactionManager" as TransactionManager {
'}

class "TransactionRecord" as TransactionRecord {
}


' Relationships Inheritance

DataSource <|-- TransactionDataSource

TransactionDataSource <|-- LedgerDataSource
TransactionDataSource <|-- ExchangeDataSource

' Relationships Cardinalities

TransactionDataSource "1"---"0..*" TransactionRecord

'DataSource "1"--"*" DataSourceController
'DataSource "1"--"1" TransactionManager

'LedgerDataSource "1"--"*" LedgerRecordReader
'LedgerDataSource "1"--"*" LedgerRecordWriter

@enduml
